# BugsByte2026

./: .gitignore  README.md  package-lock.json  seed_data.sql  sql_app.db  test_auth.py  test_auth_db.py
backend/: .env.example  .gitignore  auth.py  data.json  database.py  food_data.py  generate_seed_sql.py  llm_client.py  main.py  migrate.py  models.py  negotiator.py  pyproject.toml  requirements.txt  schemas.py  seed.py  seed_postgres.py  shops.py  sql_app.db  start.sh  test_db.py  vision.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/public/models/: salad.glb
frontend/src/: App.vue  auth.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: AboutPage.vue  BodyEvolution.vue  CasinoGame.vue  DashboardHome.vue  DiaryTracking.vue  FastingTimer.vue  FavoritesPage.vue  ForgotPassword.vue  HistoryPage.vue  Home.vue  LandingPage.vue  LoginPage.vue  Negotiator.vue  NutritionQuiz.vue  ProfilePanel.vue  ResetPassword.vue  SettingsPage.vue  ShopFinder.vue  SidebarItem.vue  SidebarNav.vue  SiteHomePage.vue  UnitConverter.vue  UserInfo.vue  VisionRecipe.vue  VolumeComparison.vue  WeightChart.vue  YourRecipesPage.vue
frontend/src/router/: index.js
frontend/src/store/: userStore.js
frontend/src/utils/: imageUpload.js  recipeHistory.js  shoppingList.js
